--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 layout: index
 title: "Light And Shadow ART"
 ---
-
-<h1>
-    光与影的艺术<br/>
-    Light And Shadow ART
-</h1>
+<head>
+    <title>Light And Shadow ART-光与影的艺术</title>
+</head>
+<div width="100%" height="100%" align="center">
+    <h1>
+        光与影的艺术<br/>
+        Light And Shadow ART
+    </h1>
+</div>
