--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: index
 title: "Light And Shadow ART"
 ---
 <head>
-    <title>Light And Shadow ART-光与影的艺术</title>
+    <title>拉斯·阿尔特</title>
 </head>
 <div width="100%" height="100%" align="center">
     <h1>
