--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@ title: "Light And Shadow ART"
 ---
 <head>
     <title>Light And Shadow ART</title>
+    
 </head>
+<body style="background: #000 url(bg.jpg) no-repeat fixed top;">
 <div width="100%" height="100%" align="center">
     <h1>
         光与影的艺术<br/>
         Light And Shadow ART
     </h1>
 </div>
+</body>
