--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: "Light And Shadow ART"
 </head>
 <body style="background: #000 url(bg.jpg) no-repeat fixed top;">
 <div width="100%" height="100%" align="center">
-    <h1 style="font-color:#fff;">
+    <h1 style="color:#fff;">
         光与影的艺术<br/>
         Light And Shadow ART
     </h1>
