--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: "Light And Shadow ART"
 <body style="background: #000 url(bg.jpg) no-repeat fixed top;">
 <div width="100%" height="100%" align="center">
     <h1 style="color:#fff;">
-        光与影的艺术<br/>
+        <br/><br/>光与影的艺术<br/>
         Light And Shadow ART
     </h1>
 </div>
